changed header html -> a differend title

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,5 +1,5 @@
 <header id="header-area">
-  <h1><span>Bear</span> <span>Online</span></h1>
+  <h1><span>Winc</span> <span>CD</span> <span>Assignment</span></h1>
   <nav id="nav-area">
     {% if g.user %}
     <ul>
