--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
-    <script src="url_for('static', filename='js/app.js')"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
